// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MFileUpload completed should render completed files 1`] = `
<m-dialog title="Upload files"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <h2>
                <m-icon name="drag-drop" size="48px"></m-icon> <span class="m-i18n">Drag and drop files</span></h2>
            <p class="m-file-upload__drop-zone__or"><span class="m-i18n">or</span></p>
            <m-file-select skin="primary" class="m-file-upload__drop-zone__button"></m-file-select>
        </div>
        <div class="m-file-upload__completed-list">
            <ul name="m--is" tag="ul" class="m-file-upload__completed-list__wrap">
                <li>
                    <div class="m-file-upload__completed-list__content">
                        <div class="m-file-upload__completed-list__file-icon">
                            <m-icon name="chip-info" size="24px"></m-icon>
                        </div>
                        <div class="m-file-upload__completed-list__infos">
                            <p class="m-file-upload__completed-list__infos-label">completed-file</p>
                            <p class="m-file-upload__completed-list__infos-size">1 b</p>
                        </div>
                        <div class="m-file-upload__completed-list__delete">
                            <m-icon-button icon-name="default" button-size="32px" icon-size="12px" class="m-file-upload__completed-list__button"></m-icon-button>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
    <div slot="footer" class="m-file-upload__footer">
        <m-button><span class="m-i18n">Add</span> <span slot="precision">1
                <span class="m-i18n">file</span></span>
        </m-button>
        <m-button skin="secondary" class="m-u--margin-left"><span class="m-i18n">Cancel</span></m-button>
    </div>
</m-dialog>
`;

exports[`MFileUpload should render correctly 1`] = `
<m-dialog title="Upload files"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <h2>
                <m-icon name="drag-drop" size="48px"></m-icon> <span class="m-i18n">Drag and drop files</span></h2>
            <p class="m-file-upload__drop-zone__or"><span class="m-i18n">or</span></p>
            <m-file-select skin="primary" class="m-file-upload__drop-zone__button"></m-file-select>
        </div>
    </div>
    <div slot="footer" class="m-file-upload__footer">
        <m-button disabled="disabled"><span class="m-i18n">Add</span> <span slot="precision" style="display:none;">0
                <span class="m-i18n">file</span></span>
        </m-button>
        <m-button skin="secondary" class="m-u--margin-left"><span class="m-i18n">Cancel</span></m-button>
    </div>
</m-dialog>
`;

exports[`MFileUpload uploading should render uploading files 1`] = `
<m-dialog title="Upload files"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <h2>
                <m-icon name="drag-drop" size="48px"></m-icon> <span class="m-i18n">Drag and drop files</span></h2>
            <p class="m-file-upload__drop-zone__or"><span class="m-i18n">or</span></p>
            <m-file-select skin="primary" class="m-file-upload__drop-zone__button"></m-file-select>
        </div>
        <h3 class="m-file-upload__title"><span class="m-i18n">Uploading</span> (1
            <span class="m-i18n">file</span>)
        </h3>
        <div class="m-file-upload__import-list">
            <ul name="m--is" tag="ul" class="m-file-upload__import-list__wrap">
                <li>
                    <div class="m-file-upload__import-list__content">
                        <div class="m-file-upload__import-list__file-icon">
                            <m-icon name="chip-info" size="24px"></m-icon>
                        </div>
                        <div class="m-file-upload__import-list__progress-wrap">
                            <div class="m-file-upload__import-list__infos">
                                <p class="m-file-upload__import-list__name">uploading-file</p>
                                <p class="m-file-upload__import-list__size">1 b</p>
                            </div>
                            <m-progress value="33" state="in-progress"></m-progress>
                        </div>
                        <div class="m-file-upload__import-list__delete">
                            <m-icon-button icon-name="default" button-size="32px" icon-size="12px" class="m-file-upload__import-list__button"></m-icon-button>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
    <div slot="footer" class="m-file-upload__footer">
        <m-button disabled="disabled"><span class="m-i18n">Add</span> <span slot="precision" style="display:none;">0
                <span class="m-i18n">file</span></span>
        </m-button>
        <m-button skin="secondary" class="m-u--margin-left"><span class="m-i18n">Cancel</span></m-button>
    </div>
</m-dialog>
`;

exports[`MFileUpload validation should render accepted file extensions 1`] = `
<m-dialog title="Upload files"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <h2>
                <m-icon name="drag-drop" size="48px"></m-icon> <span class="m-i18n">Drag and drop files</span></h2>
            <p class="m-file-upload__drop-zone__or"><span class="m-i18n">or</span></p>
            <m-file-select skin="primary" multiple="multiple" class="m-file-upload__drop-zone__button"></m-file-select>
            <p class="m-file-upload__drop-zone__format"><span class="m-i18n m-file-upload__drop-zone__format__label">Accepted formats</span>: jpg, png, mp4</p>
        </div>
    </div>
    <div slot="footer" class="m-file-upload__footer">
        <m-button disabled="disabled"><span class="m-i18n">Add</span> <span slot="precision" style="display:none;">0
                <span class="m-i18n">file</span></span>
        </m-button>
        <m-button skin="secondary" class="m-u--margin-left"><span class="m-i18n">Cancel</span></m-button>
    </div>
</m-dialog>
`;

exports[`MFileUpload validation validation messages should render rejected files in modal 1`] = `
<m-dialog title="Upload files"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-message m-file-upload__error-message m--has-error m--is-skin-regular">
            <div class="m-message__wrap">
                <div class="m-message__icon">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon">
                        <use xlink:href="#error" aria-hidden="true"></use>
                    </svg>
                </div>
                <div class="m-message__body m--has-close-button">
                    <button type="button" class="m-icon-button m-message__body__close-button m--is-skin-light m--has-ripple" style="width:44px;height:44px;font-size:10px;">
                        <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                            <use xlink:href="#close" aria-hidden="true"></use>
                        </svg> <span class="m-icon-button__hidden"><span class="m-i18n">Close</span></span>
                    </button>
                    <div class="m-message__body__content">
                        <p class="m-file-upload__error-message__title"><span class="m-i18n">The following files can not be added.</span></p>
                        <ul class="m-file-upload__error-message__list">
                            <li>
                                <p class="m-file-upload__error-message__file-name">invalid-extensions</p>
                                <p class="m-file-upload__error-message__error"><span class="m-i18n">The file extension is not accepted.</span></p>
                            </li>
                            <li>
                                <p class="m-file-upload__error-message__file-name">invalid-size.jpg</p>
                                <p class="m-file-upload__error-message__error"><span class="m-i18n">File is denied because its size exceeds the allowable limit</span> (1 Kb).
                                </p>
                            </li>
                            <li>
                                <p class="m-file-upload__error-message__file-name">max-files.jpg</p>
                                <p class="m-file-upload__error-message__error"><span class="m-i18n">The maximum number of files that can be added simultaneously is reached</span> (5 <span class="m-i18n">files</span>)
                                </p>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
        <div class="m-file-upload__drop-zone">
            <h2>
                <svg aria-hidden="true" width="48px" height="48px" class="m-icon">
                    <use xlink:href="#drag-drop" aria-hidden="true"></use>
                </svg> <span class="m-i18n">Drag and drop files</span></h2>
            <p class="m-file-upload__drop-zone__or"><span class="m-i18n">or</span></p>
            <m-file-select skin="primary" multiple="multiple" class="m-file-upload__drop-zone__button"></m-file-select>
            <p class="m-file-upload__drop-zone__format"><span class="m-i18n m-file-upload__drop-zone__format__label">Accepted formats</span>: jpg, png, mp4</p>
        </div>
    </div>
    <div slot="footer" class="m-file-upload__footer">
        <m-button disabled="disabled"><span class="m-i18n">Add</span> <span slot="precision" style="display:none;">0
                <span class="m-i18n">file</span></span>
        </m-button>
        <m-button skin="secondary" class="m-u--margin-left"><span class="m-i18n">Cancel</span></m-button>
    </div>
</m-dialog>
`;
